--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -4,7 +4,8 @@ title: "Bug: (the bug you found)"
 labels: ["bug"]
 body:
 - type: markdown
-  value: "Thanks for your completing this bug report form. "
+  attributes:
+    value: "Thanks for your completing this bug report form. "
 - type: dropdown
   id: platform
   attrbutes:
