--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -31,5 +31,5 @@ body:
 - type: textarea
   id: log
   attributes:
-    description: "Please paste your logs here. To find the logs, please click the menu in demucs-GUI window. You can attach the file here. "
+    description: "Please paste your logs here. To find the logs, please click the menu in demucs-GUI window. You can remove some file paths inside the log, including model path and file path. You can attach the file here. "
     label: log
