--- a/requirements_rocm.txt
+++ b/requirements_rocm.txt
@@ -1,3 +1,5 @@
+--extra-index-url https://download.pytorch.org/whl/rocm5.6
+
 # demucs>=4.1.0a2
 git+https://github.com/adefossez/demucs.git  # Use git repo as it 4.1.0 hasn't been pushed to PyPI
 numpy
